# codespan-reporting-py

./: README.md  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  release.yml  unit-test.yml
rust/: Cargo.toml
rust/src/: config.rs  diagnostic.rs  emit.rs  file.rs  lib.rs
src/codespan_reporting/: __init__.py  _core.pyi
tests/: test_basic.py
