[package]
name = "codespan-reporting-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "codespan_reporting_pyo3"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["abi3-py310"] }
codespan-reporting = "0.12.0"
